<resources>
    <string name="app_name">Navigation Component</string>

    <!-- Home Fragment -->
    <string name="home_fragment">Home Fragment</string>
    <string name="login">Login</string>
    <string name="home">Home</string>

    <!-- Login Fragment -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>

    <!-- Welcome Fragment -->
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="ok">OK</string>

    <!-- Settings Fragment -->
    <string name="settings_fragment">Settings Fragment</string>
    <string name="settings">Settings</string>

    <!-- Terms and Conditions Fragment -->
    <string name="terms_and_conditions">Terms &amp; Conditions</string>

    <!-- Search Fragment -->
    <string name="search_fragment">Search Fragment</string>
    <string name="search">Search</string>
</resources>